fixed a bug regarding .toList() method in java stream not matching with the java version